// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates node 1`] = `
Object {
  "data": Object {
    "createPerson": Object {
      "person": Object {
        "name": "Tim",
      },
    },
  },
}
`;

exports[`creates node 2`] = `
Object {
  "data": Object {
    "person": Object {
      "name": "Tim",
    },
  },
}
`;

exports[`creates node linked to existing nodes 1`] = `
Object {
  "data": Object {
    "dad": Object {
      "person": Object {
        "name": "Matthew",
      },
    },
    "mum": Object {
      "person": Object {
        "name": "Linda",
      },
    },
  },
}
`;

exports[`creates node linked to existing nodes 2`] = `
Object {
  "data": Object {
    "createPerson": Object {
      "person": Object {
        "name": "David",
        "parents": Object {
          "0": Object {
            "name": "Linda",
          },
          "1": Object {
            "name": "Matthew",
          },
        },
      },
    },
  },
}
`;

exports[`creates node with nested node 1`] = `
Object {
  "data": Object {
    "createPerson": Object {
      "person": Object {
        "name": "Tim",
        "partner": Object {
          "name": "Bob",
        },
      },
    },
  },
}
`;

exports[`creates node with nested node 2`] = `
Object {
  "data": Object {
    "partner1": Object {
      "name": "Tim",
    },
    "partner2": Object {
      "name": "Bob",
    },
  },
}
`;

exports[`creating node with edge to node of incorrect type returns error 1`] = `
Object {
  "data": Object {
    "createPerson": Object {
      "person": Object {
        "name": "Tim",
      },
    },
  },
}
`;

exports[`creating node with edge to node of incorrect type returns error 2`] = `
Object {
  "data": Object {
    "createPerson": null,
  },
  "errors": Object {
    "0": Object {
      "locations": Object {
        "0": Object {
          "column": 5,
          "line": 2,
        },
      },
      "message": "Cannot create edge \\"emails\\" from \\"Person\\" to \\"Person\\", should be \\"Email\\"",
      "path": Object {
        "0": "createPerson",
      },
    },
  },
}
`;

exports[`creating node with edge to non-existent node returns error 1`] = `
Object {
  "data": Object {
    "createPerson": null,
  },
  "errors": Object {
    "0": Object {
      "locations": Object {
        "0": Object {
          "column": 5,
          "line": 2,
        },
      },
      "message": "There is no \\"Person\\" with id \\"0x00\\"",
      "path": Object {
        "0": "createPerson",
      },
    },
  },
}
`;

exports[`deletes node 1`] = `
Object {
  "data": Object {
    "createPerson": Object {
      "person": Object {
        "name": "Tim",
      },
    },
  },
}
`;

exports[`deletes node 2`] = `
Object {
  "data": Object {
    "deletePerson": Object {
      "person": Object {},
    },
  },
}
`;

exports[`deletes node 3`] = `
Object {
  "data": Object {
    "person": null,
  },
  "errors": Object {
    "0": Object {
      "locations": Object {
        "0": Object {
          "column": 5,
          "line": 2,
        },
      },
      "message": "There is no 'Node' with id '0x00'",
      "path": Object {
        "0": "person",
      },
    },
  },
}
`;

exports[`deletes reverse edge to deleted node 1`] = `
Object {
  "data": Object {
    "createPerson": Object {
      "person": Object {
        "name": "Tim",
        "partner": Object {
          "name": "Bob",
        },
      },
    },
  },
}
`;

exports[`deletes reverse edge to deleted node 2`] = `
Object {
  "data": Object {
    "deletePerson": Object {
      "person": Object {
        "name": "Tim",
      },
    },
  },
}
`;

exports[`deletes reverse edge to deleted node 3`] = `
Object {
  "data": Object {
    "person": Object {
      "partner": null,
    },
  },
}
`;

exports[`deletes reverse edges to deleted node 1`] = `
Object {
  "data": Object {
    "createPerson": Object {
      "person": Object {
        "children": Object {
          "0": Object {
            "name": "James",
          },
          "1": Object {
            "name": "Sarah",
          },
        },
        "name": "Tim",
      },
    },
  },
}
`;

exports[`deletes reverse edges to deleted node 2`] = `
Object {
  "data": Object {
    "deletePerson": Object {
      "person": Object {
        "children": Object {
          "0": Object {
            "name": "James",
          },
          "1": Object {
            "name": "Sarah",
          },
        },
        "name": "Tim",
      },
    },
  },
}
`;

exports[`deletes reverse edges to deleted node 3`] = `
Object {
  "data": Object {
    "person": Object {
      "name": "Sarah",
      "parents": Object {},
    },
  },
}
`;

exports[`deleting non-existent node returns error 1`] = `
Object {
  "data": Object {
    "deletePerson": null,
  },
  "errors": Object {
    "0": Object {
      "locations": Object {
        "0": Object {
          "column": 5,
          "line": 2,
        },
      },
      "message": "There is no 'Person' with id '0x00'",
      "path": Object {
        "0": "deletePerson",
      },
    },
  },
}
`;

exports[`returns fields for created node 1`] = `
Object {
  "data": Object {
    "createPerson": Object {
      "person": Object {
        "name": "Tim",
      },
    },
  },
}
`;

exports[`returns fields on updated node 1`] = `
Object {
  "data": Object {
    "createPerson": Object {
      "person": Object {
        "name": "Tim",
      },
    },
  },
}
`;

exports[`returns fields on updated node 2`] = `
Object {
  "data": Object {
    "updatePerson": Object {
      "person": Object {
        "name": "Jim",
      },
    },
  },
}
`;

exports[`updates node 1`] = `
Object {
  "data": Object {
    "createPerson": Object {
      "person": Object {
        "name": "Tim",
      },
    },
  },
}
`;

exports[`updates node 2`] = `
Object {
  "data": Object {
    "updatePerson": Object {
      "person": Object {
        "name": "Jim",
      },
    },
  },
}
`;

exports[`updates node 3`] = `
Object {
  "data": Object {
    "person": Object {
      "name": "Jim",
    },
  },
}
`;
